# NCPU01

./: CMakeLists.txt  partitions.csv
components/home/: CMakeLists.txt  idf_component.yml
data/: config.json  data.rar  gateway.json  header.css  reset.json  senaryo1.json  setup.html  tab2.css
main/: CMakeLists.txt  idf_component.yml  main.cpp  ping.cpp  ping.h  remote_log.cpp  remote_log.h
main/lib/: config.cpp  event.cpp  http.c  mqttcallback.cpp  tcpcallback.cpp  uartcallback.cpp
main/lib/senaryo/: senaryo.cpp  senaryo.h
main/lib/tool/: tool.cpp  tool.h
